--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 Третий способ в своем большинстве не относятся к человеческим именам. Сюда входят клички животных, названия улиц или достопримечательностей.
 Правда, «говорящие» имена разрешается переводить калькированием, но делать это нужно очень осторожно.</a></p><br/>
 		<p><a class="waitlink">Мы не будем рассматривать все имена — персонажей в серии книг очень много. Выберем несколько из них. ...</a></p>
-		<p><a href="https://habr.com/ru/company/englishdom/blog/431618/" class="mycursor">Читать продолжение в источние<a/></p>
+		<p><a href="https://habr.com/ru/company/englishdom/blog/431618/" class="mycursor">Читать продолжение в источние</a></p>
 	</body>
 </html>
